--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,8 @@ body {
     width: 100%;
     height: 80px;
     line-height: 80px;
+    position: sticky;
+    background: white;
     top: 0;
     left: 0;
     z-index: 999999;
