--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,10 @@
     .hero_section{
         @apply bg-[url('./assets/images/hero-bg.png')] bg-no-repeat bg-center bg-cover
     }
+    .bd{
+        @apply border-2 border-solid border-amber-400
+    }
+
 }
 
 @media only screen and (max-width: 1024px){
