--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,14 @@
         @apply bg-[url('./assets/images/hero-bg.png')] bg-no-repeat bg-center bg-cover
     }
     .bd{
-        @apply border-2 border-solid border-amber-400
+        @apply border-2 border-solid border-r-red-700
+    }
+
+    .form_label{
+        @apply text-textColor font-semibold text-[16px] mb-2
+    }
+    .form_input{
+        @apply w-full px-4 py-3 border border-solid border-[#0066ff61] focus:outline-none focus:border-primaryColor text-[16px] leading-7 text-headingColor placeholder:text-textColor cursor-pointer rounded-md
     }
 
 }
